--- a/index.html
+++ b/index.html
@@ -85,11 +85,16 @@ https://templatemo.com/tm-561-purple-buzz
                         <div class="py-5 row d-flex align-items-center">
                             <div class="banner-content col-lg-8 col-8 offset-2 m-lg-auto text-left py-5 pb-5">
                                 <h1 class="banner-heading h1 text-secondary display-3 mb-0 pb-5 mx-0 px-0 light-300 typo-space-line">
-                                    Develop <strong>Strategies</strong> for 
-                                  <br>your business
-                              </h1>
-                                <p class="banner-body text-muted py-3 mx-0 px-0">
-                                    Purple Buzz is a corporate HTML template with Bootstrap 5 Beta 1. This CSS template is 100% free to download provided by <a rel="nofollow" href="https://templatemo.com/page/1" target="_parent">TemplateMo</a>. Total 6 HTML pages included in this template. Icon fonts by <a rel="nofollow" href="https://boxicons.com/" target="_blank">Boxicons</a>. Photos are from <a rel="nofollow" href="https://unsplash.com/" target="_blank">Unsplash</a> and <a rel="nofollow" href="https://icons8.com/" target="_blank">Icons 8</a>.
+                                    <strong style="color:red">சிவ தியானம்</strong></h1>
+                                <p  class="banner-body text-muted py-3 mx-0 px-0" style="color:red !important">
+                                    சாந்தம் பத்மாஸநஸ்தம் சசிதரமகுடம்<br>
+பஞ்சவக்த்ரம் த்ரிநேத்ரம் <br>
+சூலம் வஜ்ரம் ச கட்கம் பரசுமபயதம் <br>
+தக்ஷிணாங்கே வஹந்தம் |<br>
+ நாகம் பாசஞ்ச கண்டாம் வர டமருயுதம் <br>
+ச அங்குசம் வாமபாகே<br>
+நாநாலங்காரயுக்தம் ஸ்படிகமணி நிபம் <br>
+பார்வதீசம் நமாமி || <br>
                               </p>
                                 <a class="banner-button btn rounded-pill btn-outline-primary btn-lg px-4" href="#" role="button">Get Started</a>
                             </div>
